--- a/inputBox/manifest.json
+++ b/inputBox/manifest.json
@@ -28,7 +28,7 @@
 
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["https://gemini.google.com/app/*"],
       "js": ["content.js"]
     }
   ],
