--- a/inputBox/manifest.json
+++ b/inputBox/manifest.json
@@ -29,7 +29,8 @@
   "content_scripts": [
     {
       "matches": ["https://gemini.google.com/app/*"],
-      "js": ["content.js"]
+      "js": ["content.js"],
+      "css": ["content.css"]
     }
   ],
   "host_permissions": [
