--- a/inputBox/manifest.json
+++ b/inputBox/manifest.json
@@ -12,7 +12,7 @@
       "tabs"
     ],
     "action": {
-      "default_popup": "popup.html",
+      
       "default_icon": {
         "16": "public/logo.png",
         "48": "public/logo.png",
@@ -24,6 +24,7 @@
     "background": {
     "service_worker": "background.js"
   },
+  "options_page": "options.html",
 
 
   "content_scripts": [
