--- a/inputBox/manifest.json
+++ b/inputBox/manifest.json
@@ -6,9 +6,8 @@
     "permissions": [
       "scripting",
       "storage",
-      "commands",
-      "contextMenus",
       "activeTab",
+      "commands",
       "tabs"
     ],
     "action": {
@@ -29,14 +28,16 @@
 
   "content_scripts": [
     {
-      "matches": ["https://gemini.google.com/app/*"],
+      "matches": ["<all_urls>"],
       "js": ["content.js"],
       "css": ["content.css"]
     }
   ],
   "host_permissions": [
+    "https://api.groq.com/*",
     "<all_urls>"
   ],
+
   "icons": {
       "48": "public/logo.png"
     },
